force-app/main/default/objects/Lead/fields/Address_Full__c.field-meta.xml
<CustomField>
    <fullName>Address_Full__c</fullName>
    <formula>Address_No__c +&apos; , &apos; + Province__r.Name + &apos; , &apos; + District__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address Full</label>
    <type>Text</type>
</CustomField>