force-app/main/default/objects/Lead/fields/Assignment_Round__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Round__c</fullName>
    <label>Assignment Round</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>