force-app/main/default/objects/Lead/fields/Available_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Available_In_Stock__c</fullName>
    <description>Formula lấy từ Is stock , hiện đang default là true, cần làm thêm logic (khi add product vào và button refesh stock)</description>
    <formula>IF(  Is_Stock__c  = True,
IMAGE(&apos;/resource/yes&apos;, &apos;yes&apos; , 40, 40),
IMAGE(&apos;/resource/no&apos;, &apos;no&apos; , 40, 40))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available In Stock</label>
    <type>Text</type>
</CustomField>