force-app/main/default/objects/Lead/fields/BookingAddress__c.field-meta.xml
<CustomField>
    <fullName>BookingAddress__c</fullName>
    <label>Booking Address</label>
    <type>TextArea</type>
</CustomField>