force-app/main/default/objects/Lead/fields/Check_in_Event__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check-in Event</label>
    <type>Checkbox</type>
</CustomField>