force-app/main/default/objects/Lead/fields/Check_Info__c.field-meta.xml
<CustomField>
    <fullName>Check_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check Info</label>
    <type>Checkbox</type>
</CustomField>