force-app/main/default/objects/Lead/fields/Close_Lead_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Lead_Reason__c</fullName>
    <label>Close Lead Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Close_Lead_Reason</valueSetName>
    </valueSet>
</CustomField>