force-app/main/default/objects/Lead/fields/Color_bikes__c.field-meta.xml
<CustomField>
    <fullName>Color_bikes__c</fullName>
    <label>Color bikes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Black Gray</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Gray Black</fullName>
            </value>
            <value>
                <fullName>Pastel Dark Gray</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Mat Light Gray</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
                <isActive>false</isActive>
                <label>Red</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>