force-app/main/default/objects/Lead/fields/District_Code__c.field-meta.xml
<CustomField>
    <fullName>District_Code__c</fullName>
    <label>District Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>