force-app/main/default/objects/Lead/fields/DO_DL_Code__c.field-meta.xml
<CustomField>
    <fullName>DO_DL_Code__c</fullName>
    <label>DO/DL Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>