force-app/main/default/objects/Lead/fields/DO_DL_Create__c.field-meta.xml
<CustomField>
    <fullName>DO_DL_Create__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DO DL Create</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (DO DL Create)</relationshipLabel>
    <relationshipName>Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>