force-app/main/default/objects/Lead/fields/Enable_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Enable_Round_Robin__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable Round Robin</label>
    <type>Checkbox</type>
</CustomField>