force-app/main/default/objects/Lead/fields/Flow_Fouls__c.field-meta.xml
<CustomField>
    <fullName>Flow_Fouls__c</fullName>
    <label>Flow Fails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>