force-app/main/default/objects/Lead/fields/From_Get_Lead__c.field-meta.xml
<CustomField>
    <fullName>From_Get_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Get Lead</label>
    <type>Checkbox</type>
</CustomField>