force-app/main/default/objects/Lead/fields/Is_Duplicated_Lead__c.field-meta.xml
<CustomField>
    <fullName>Is_Duplicated_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Duplicated Lead</label>
    <type>Checkbox</type>
</CustomField>