force-app/main/default/objects/Lead/fields/Is_Lead_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Is_Lead_Transfer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lead Transfer</label>
    <type>Checkbox</type>
</CustomField>