force-app/main/default/objects/Lead/fields/Is_Lock__c.field-meta.xml
<CustomField>
    <fullName>Is_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lock</label>
    <type>Checkbox</type>
</CustomField>