force-app/main/default/objects/Lead/fields/Is_Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Is_Round_Robin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Round Robin</label>
    <type>Checkbox</type>
</CustomField>