force-app/main/default/objects/Lead/fields/Is_Sale_Sub__c.field-meta.xml
<CustomField>
    <fullName>Is_Sale_Sub__c</fullName>
    <formula>IF( ISBLANK( Sale_Sub_DO__c ) , &apos;0&apos;, &apos;1&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Sale Sub</label>
    <type>Text</type>
</CustomField>