force-app/main/default/objects/Lead/fields/Is_Stock__c.field-meta.xml
<CustomField>
    <fullName>Is_Stock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Kiểm tra tồn kho sau khi add product vào lead</description>
    <label>Is Stock</label>
    <type>Checkbox</type>
</CustomField>