force-app/main/default/objects/Lead/fields/Is_Sup__c.field-meta.xml
<CustomField>
    <fullName>Is_Sup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sup</label>
    <type>Checkbox</type>
</CustomField>