force-app/main/default/objects/Lead/fields/KPI_Calculate_Date__c.field-meta.xml
<CustomField>
    <fullName>KPI_Calculate_Date__c</fullName>
    <label>KPI Calculate Date</label>
    <type>Date</type>
</CustomField>