force-app/main/default/objects/Lead/fields/Lead_Advisory__c.field-meta.xml
<CustomField>
    <fullName>Lead_Advisory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Advisory</label>
    <type>Checkbox</type>
</CustomField>