force-app/main/default/objects/Lead/fields/LicenseA2__c.field-meta.xml
<CustomField>
    <fullName>LicenseA2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License A2</label>
    <type>Checkbox</type>
</CustomField>