force-app/main/default/objects/Lead/fields/Manager_ID_Lead_Old__c.field-meta.xml
<CustomField>
    <fullName>Manager_ID_Lead_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager ID Lead Old</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads4</relationshipName>
    <type>Lookup</type>
</CustomField>