force-app/main/default/objects/Lead/fields/Model_Code__c.field-meta.xml
<CustomField>
    <fullName>Model_Code__c</fullName>
    <formula>Product__r.Model_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Model Code</label>
    <type>Text</type>
</CustomField>