force-app/main/default/objects/Lead/fields/Passing_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Passing_Unqualified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Passing Unqualified</label>
    <type>Checkbox</type>
</CustomField>