force-app/main/default/objects/Lead/fields/Product_Item_Interest__c.field-meta.xml
<CustomField>
    <fullName>Product_Item_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Item Interest</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>