force-app/main/default/objects/Lead/fields/Product_Note__c.field-meta.xml
<CustomField>
    <fullName>Product_Note__c</fullName>
    <label>Product Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>