force-app/main/default/objects/Lead/fields/Progress_Flow_Details__c.field-meta.xml
<CustomField>
    <fullName>Progress_Flow_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Progress Flow Details</label>
    <referenceTo>Progress_Flow_Details__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>