force-app/main/default/objects/Lead/fields/Province_Code__c.field-meta.xml
<CustomField>
    <fullName>Province_Code__c</fullName>
    <label>Province Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>