force-app/main/default/objects/Lead/fields/Round_To_Sale__c.field-meta.xml
<CustomField>
    <fullName>Round_To_Sale__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Round To Sale</label>
    <type>Checkbox</type>
</CustomField>