force-app/main/default/objects/Lead/fields/Sale_ID_Lead_Old__c.field-meta.xml
<CustomField>
    <fullName>Sale_ID_Lead_Old__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale ID Lead Old</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads3</relationshipName>
    <type>Lookup</type>
</CustomField>