force-app/main/default/objects/Lead/fields/Sale_Sub_DO__c.field-meta.xml
<CustomField>
    <fullName>Sale_Sub_DO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sale Sub DO</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>