force-app/main/default/objects/Lead/fields/SpecifiedTimeTD__c.field-meta.xml
<CustomField>
    <fullName>SpecifiedTimeTD__c</fullName>
    <label>Specific Times Test Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sáng</fullName>
            </value>
            <value>
                <fullName>Chiều</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>