force-app/main/default/objects/Lead/fields/Takeback_Time__c.field-meta.xml
<CustomField>
    <fullName>Takeback_Time__c</fullName>
    <label>Takeback Time</label>
    <type>DateTime</type>
</CustomField>