force-app/main/default/objects/Lead/fields/TimeDriveEnd__c.field-meta.xml
<CustomField>
    <fullName>TimeDriveEnd__c</fullName>
    <formula>IF( TEXT(SpecifiedTimeTD__c) = &apos;Sáng&apos; , DATETIMEVALUE( TEXT(BookingDate__c) &amp;&quot; &quot;&amp; &quot;11:00:00&quot;) - 0.2916666667 , IF( TEXT(SpecifiedTimeTD__c) = &apos;Chiều&apos; , DATETIMEVALUE( TEXT( BookingDate__c) &amp;&quot; &quot;&amp; &quot;17:00:00&quot;) - 0.2916666667 , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Drive End</label>
    <type>DateTime</type>
</CustomField>