force-app/main/default/objects/Lead/fields/TimeDriveStart__c.field-meta.xml
<CustomField>
    <fullName>TimeDriveStart__c</fullName>
    <formula>IF( TEXT(SpecifiedTimeTD__c) = &apos;Sáng&apos; , DATETIMEVALUE( TEXT(BookingDate__c) &amp; &quot; &quot; &amp; &quot;08:00:00&quot;) - 0.2916666667 , IF( TEXT(SpecifiedTimeTD__c) = &apos;Chiều&apos; , DATETIMEVALUE( TEXT(BookingDate__c) &amp;&quot; &quot;&amp; &quot;13:00:00&quot;) - 0.2916666667 , null))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Drive Start</label>
    <type>DateTime</type>
</CustomField>