force-app/main/default/objects/Lead/fields/Wrong_Info__c.field-meta.xml
<CustomField>
    <fullName>Wrong_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wrong Info</label>
    <type>Checkbox</type>
</CustomField>