force-app/main/default/objects/Lead/fields/X1Office_Data__c.field-meta.xml
<CustomField>
    <fullName>X1Office_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>1Office Data</label>
    <type>Checkbox</type>
</CustomField>