force-app/main/default/objects/Lead/validationRules/Check_Close_Lead_Reason_Before_Unqualifi.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Close_Lead_Reason_Before_Unqualifi</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status, &quot;Unqualified&quot;) &amp;&amp; ISPICKVAL(Close_Lead_Reason__c, &quot; &quot;) &amp;&amp; Progress_Flow_Details__c != NUll)</errorConditionFormula>
    <errorDisplayField>Close_Lead_Reason__c</errorDisplayField>
    <errorMessage>Currently, Field name &quot;Close Lead Reason&quot; isn&apos;t value.</errorMessage>
</ValidationRule>