force-app/main/default/objects/Lead/validationRules/Check_DO_DL_Create.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_DO_DL_Create</fullName>
    <active>true</active>
    <errorConditionFormula>ISNEW() &amp;&amp; DO_DL_Create__c == NULL</errorConditionFormula>
    <errorMessage>Field DO DL Create is not blank.</errorMessage>
</ValidationRule>