force-app/main/default/objects/Lead/validationRules/Check_Other_Reason_Unqualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Other_Reason_Unqualified</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   ISPICKVAL(Close_Lead_Reason__c , &quot;Other&quot;),
   LEN( Other_Reason__c ) &lt; 1
)</errorConditionFormula>
    <errorMessage>User have to fill in field Other Reason!</errorMessage>
</ValidationRule>