force-app/main/default/objects/Lead/validationRules/Close_reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_reason</fullName>
    <active>false</active>
    <errorConditionFormula>IF(AND( TEXT(Status)=&apos;Unqualified&apos;,  ISBLANK( TEXT(Close_Lead_Reason__c) )  ), true, false)</errorConditionFormula>
    <errorMessage>Please update Close lead reason.</errorMessage>
</ValidationRule>