force-app/main/default/objects/Lead/validationRules/Lock_Record_When_Notify.validationRule-meta.xml
<ValidationRule>
    <fullName>Lock_Record_When_Notify</fullName>
    <active>false</active>
    <errorConditionFormula>PRIORVALUE(Is_Lock__c)  == true  &amp;&amp; NOT(ISNEW())</errorConditionFormula>
    <errorMessage>Record has been locked.</errorMessage>
</ValidationRule>