force-app/main/default/objects/Lead/validationRules/Require_Email_and_Phone_when_convert.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Email_and_Phone_when_convert</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND( TEXT( Status )=&apos;Converted&apos;, OR( ISBLANK( Email ) , ISBLANK( MobilePhone ) )), true, false)</errorConditionFormula>
    <errorMessage>Please update phone and email before convert a lead.</errorMessage>
</ValidationRule>