force-app/main/default/objects/Lead/validationRules/Unqualified.validationRule-meta.xml
<ValidationRule>
    <fullName>Unqualified</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
  NOT(ISNEW()), 
  ISCHANGED(Status),
  ISPICKVAL( PRIORVALUE(Status),&quot;Unqualified&quot;)
)</errorConditionFormula>
    <errorMessage>Lead&apos;s Unqualified cann&apos;t change or edit all field.</errorMessage>
</ValidationRule>