force-app/main/default/objects/Lead/listViews/All_Open_Leads_HN.listView-meta.xml
<ListView>
    <fullName>All_Open_Leads_HN</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.LEAD_SOURCE</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>DO_DL_Owner__c</columns>
    <columns>Round_To_Sale__c</columns>
    <columns>Run_Reassign__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Type__c</field>
        <operation>equals</operation>
        <value>Bike</value>
    </filters>
    <filters>
        <field>DO_DL_Create__c</field>
        <operation>equals</operation>
        <value>REVZONE YAMAHA MOTOR HA NOI</value>
    </filters>
    <label>All Open Leads HN</label>
    <sharedTo>
        <group>Group_User_DO_HN</group>
    </sharedTo>
</ListView>