force-app/main/default/objects/Lead/listViews/Lead_Service.listView-meta.xml
<ListView>
    <fullName>Lead_Service</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.MOBILE_PHONE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Lead_Type__c</field>
        <operation>equals</operation>
        <value>Service</value>
    </filters>
    <filters>
        <field>DO_DL_Create__c</field>
        <operation>equals</operation>
        <value>REVZONE YAMAHA MOTOR SAI GON</value>
    </filters>
    <label>Lead Service SG</label>
    <sharedTo>
        <group>Service_HCM</group>
    </sharedTo>
</ListView>